examples/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: swarmbot
    labels:
        app.kubernetes.io/part-of: swarmbot
