examples/k8s/10-couchdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: couchdb
    namespace: sw4rmbot
    labels:
        app: couchdb
spec:
    serviceName: couchdb
    replicas: 1
    selector:
        matchLabels:
            app: couchdb
    template:
        metadata:
            labels:
                app: couchdb
        spec:
            containers:
                - name: couchdb
                  image: couchdb:3
                  ports:
                      - containerPort: 5984
                  volumeMounts:
                      - name: data
                        mountPath: /opt/couchdb/data
                  readinessProbe:
                      httpGet:
                          path: /
                          port: 5984
                      initialDelaySeconds: 5
                      periodSeconds: 10
            volumes:
                - name: data
                  persistentVolumeClaim:
                      claimName: couchdb-data
---
apiVersion: v1
kind: Service
metadata:
    name: db
    namespace: sw4rmbot
spec:
    selector:
        app: couchdb
    ports:
        - port: 5984
          targetPort: 5984
